added nav ul li to body

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li class="example">Metals</li>
+            <li class="example">Crystals</li>
+            <li class="example">Gems</li>
+        </ul>
+    </nav>
    
 </body>
 </html>
