--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,14 +9,17 @@
 
     <link rel="stylesheet" href="./styles.css">
 </head>
+
 <body>
-    <nav>
-        <ul>
-            <li class="example">Metals</li>
-            <li class="example">Crystals</li>
-            <li class="example">Gems</li>
-        </ul>
-    </nav>
-   
+  
+        <nav>
+            <ul>
+                <li class="example"><a href=""> Metals</a></li>
+                <li class="example"><a href=""> Crystals</a></li>
+                <li class="example"><a href=""> Gems</a></li>
+            </ul>
+        </nav>
+  
 </body>
+
 </html>
